[gd_scene load_steps=24 format=2]

[ext_resource path="res://Tilesets/NewMap.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainGame/MainGame.gd" type="Script" id=4]
[ext_resource path="res://Items/ItemBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Player3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Materials/stringstar fields/background_1.png" type="Texture" id=7]
[ext_resource path="res://Materials/stringstar fields/background_2.png" type="Texture" id=8]
[ext_resource path="res://Materials/stringstar fields/background_0.png" type="Texture" id=9]
[ext_resource path="res://Materials/stringstar fields/deco1.png" type="Texture" id=10]
[ext_resource path="res://Materials/stringstar fields/plant2.png" type="Texture" id=11]
[ext_resource path="res://Materials/stringstar fields/rock.png" type="Texture" id=12]
[ext_resource path="res://Materials/stringstar fields/deco2.png" type="Texture" id=13]
[ext_resource path="res://Materials/stringstar fields/plant1.png" type="Texture" id=14]
[ext_resource path="res://Particles/fireflies.tscn" type="PackedScene" id=15]
[ext_resource path="res://Player/Player4.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/Lives.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/virtual_guy.png" type="Texture" id=18]
[ext_resource path="res://UI/ninja_frog.png" type="Texture" id=19]
[ext_resource path="res://UI/pink_man.png" type="Texture" id=20]
[ext_resource path="res://Materials/Iceland Theme.wav" type="AudioStream" id=21]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
light_mode = 1

[node name="MainGame" type="Node2D"]
position = Vector2( 0.971313, -2.67352 )
script = ExtResource( 4 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 501.196, 302.733 )
scale = Vector2( 3.48003, 3.35804 )
texture = ExtResource( 9 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 500.011, 288.177 )
scale = Vector2( 3.47547, 3.6127 )
texture = ExtResource( 7 )

[node name="Background3" type="Sprite" parent="."]
modulate = Color( 0.0862745, 0.501961, 0.423529, 0.658824 )
position = Vector2( 501.427, 279.743 )
scale = Vector2( 3.4853, 3.68603 )
texture = ExtResource( 8 )

[node name="Background4" type="Sprite" parent="."]
modulate = Color( 0.380392, 0.0862745, 0.501961, 0.658824 )
position = Vector2( 500.633, 335.302 )
rotation = 3.14159
scale = Vector2( 3.4853, 3.68603 )
texture = ExtResource( 8 )

[node name="Particles2D" parent="." instance=ExtResource( 15 )]
position = Vector2( 500, 300 )
scale = Vector2( 1, 1 )
amount = 300
visibility_rect = Rect2( -500, -400, 1000, 800 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131083, 8, 0, 196611, 7, 0, 196612, 7, 0, 196624, 7, 0, 196625, 7, 0, 196626, 7, 0, 196627, 7, 0, 196635, 8, 0, 196637, 8, 0, 327704, 7, 0, 327705, 7, 0, 393225, 8, 0, 393228, 6, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 458781, 7, 0, 458782, 7, 0, 524309, 8, 0, 720890, 6, 0, 655366, 8, 0, 655387, 8, 0, 655389, 6, 0, 786441, 7, 0, 786442, 7, 0, 786455, 7, 0, 786456, 7, 0, 786457, 7, 0, 851981, 7, 0, 851982, 7, 0, 983046, 8, 0, 983047, 8, 0, 983057, 8, 0, 983058, 8, 0, 1048600, 8, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 2, 0, 1179657, 0, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 0, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 2, 0, 1179670, 7, 0, 1179671, 7, 0, 1179672, 7, 0, 1179673, 7, 0, 1179674, 7, 0, 1179675, 7, 0, 1179676, 0, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0 )

[node name="Node" type="Node" parent="."]

[node name="Plant4" type="Sprite" parent="Node"]
position = Vector2( 330.053, 391.509 )
scale = Vector2( 1.36851, 1.07385 )
texture = ExtResource( 11 )

[node name="Plant5" type="Sprite" parent="Node"]
position = Vector2( 12.2846, 227.307 )
scale = Vector2( 1.36851, 1.07385 )
texture = ExtResource( 11 )

[node name="Plant7" type="Sprite" parent="Node"]
position = Vector2( 635.952, 102.149 )
scale = Vector2( 1.36851, 1.07385 )
texture = ExtResource( 11 )

[node name="Plant8" type="Sprite" parent="Node"]
position = Vector2( 65.6475, 555.586 )
scale = Vector2( 1.59349, 1.6961 )
texture = ExtResource( 11 )

[node name="Plant12" type="Sprite" parent="Node"]
position = Vector2( 730.369, 585.021 )
scale = Vector2( 0.832217, 0.885074 )
texture = ExtResource( 11 )

[node name="Plant9" type="Sprite" parent="Node"]
position = Vector2( 831.29, 577.049 )
scale = Vector2( 1.85308, 1.63407 )
texture = ExtResource( 11 )

[node name="Plant10" type="Sprite" parent="Node"]
modulate = Color( 0.760784, 1, 0.0980392, 1 )
material = SubResource( 1 )
position = Vector2( 951.768, 563.918 )
scale = Vector2( 2.87012, 2.57569 )
texture = ExtResource( 11 )

[node name="Plant11" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 527.943, 557.968 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant13" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 3.3071, 437.326 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant15" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 30.5906, 458.772 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )
offset = Vector2( -12.7825, -12.5 )

[node name="Plant16" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 978.269, 580.208 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )
offset = Vector2( -12.7825, -12.5 )

[node name="Plant17" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 109.961, 582.589 )
scale = Vector2( 1.37445, 1.71569 )
texture = ExtResource( 11 )
offset = Vector2( -12.7825, -12.5 )

[node name="Plant14" type="Sprite" parent="Node"]
modulate = Color( 0.862745, 1, 0.0784314, 1 )
material = SubResource( 2 )
position = Vector2( 993.845, 565.112 )
scale = Vector2( 2.13445, 1.71569 )
texture = ExtResource( 11 )

[node name="Plant3" type="Sprite" parent="Node"]
position = Vector2( 586.004, 316.721 )
scale = Vector2( 1.65777, 1.66782 )
texture = ExtResource( 11 )

[node name="Rock" type="Sprite" parent="."]
position = Vector2( 261.805, 323.283 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="Rock3" type="Sprite" parent="Rock"]
position = Vector2( 359.249, 49.6757 )
scale = Vector2( 1.48884, 1.54116 )
texture = ExtResource( 12 )

[node name="Rock4" type="Sprite" parent="Rock"]
position = Vector2( -149.185, 157.907 )
scale = Vector2( 1.57204, 1.61667 )
texture = ExtResource( 12 )

[node name="Rock5" type="Sprite" parent="Rock"]
position = Vector2( 335.978, 168.259 )
scale = Vector2( 1.6053, 1.93007 )
texture = ExtResource( 12 )

[node name="Plant1" type="Sprite" parent="."]
position = Vector2( 40.6586, 229.272 )
scale = Vector2( 1.51314, 1.42998 )
texture = ExtResource( 14 )

[node name="Plant5" type="Sprite" parent="Plant1"]
position = Vector2( 383.194, 68.2393 )
texture = ExtResource( 14 )

[node name="Plant6" type="Sprite" parent="Plant1"]
position = Vector2( 207.235, -23.6962 )
texture = ExtResource( 14 )

[node name="Plant7" type="Sprite" parent="Plant1"]
position = Vector2( 333.192, -89.5023 )
texture = ExtResource( 14 )

[node name="Fruit" type="Sprite" parent="."]
position = Vector2( 188.151, 123.589 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )

[node name="Background5" type="Sprite" parent="Fruit"]
position = Vector2( -14.7392, -0.732616 )
texture = ExtResource( 13 )

[node name="Background8" type="Sprite" parent="Fruit"]
position = Vector2( -60.7425, 85.4633 )
texture = ExtResource( 13 )

[node name="Background9" type="Sprite" parent="Fruit"]
position = Vector2( 427.467, 44.593 )
texture = ExtResource( 13 )

[node name="Background10" type="Sprite" parent="Fruit"]
position = Vector2( 217.7, 148.879 )
texture = ExtResource( 13 )

[node name="Background12" type="Sprite" parent="Fruit"]
position = Vector2( 445.757, 192.797 )
texture = ExtResource( 13 )

[node name="Background13" type="Sprite" parent="Fruit"]
position = Vector2( 518.777, 288.57 )
texture = ExtResource( 13 )

[node name="Background14" type="Sprite" parent="Fruit"]
position = Vector2( 157.378, 308.677 )
texture = ExtResource( 13 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 200 )

[node name="LifeLabel" parent="Player" index="10"]
visible = false

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 367.029, 170.674 )

[node name="Player3" parent="." instance=ExtResource( 6 )]
position = Vector2( 223.029, 314.674 )

[node name="Player4" parent="." instance=ExtResource( 16 )]
position = Vector2( 455.029, 394.674 )

[node name="GameTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 20.0
autostart = true

[node name="ItemBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 1161.73, 203.986 )
scale = Vector2( 0.890625, 0.421875 )

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Bullet" parent="." instance=ExtResource( 17 )]
position = Vector2( 800.288, 114.674 )
scale = Vector2( 0.03, 0.03 )

[node name="Stars" type="Node2D" parent="."]

[node name="Background8" type="Sprite" parent="Stars"]
position = Vector2( 666.314, 194.74 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background5" type="Sprite" parent="Stars"]
position = Vector2( 378.333, 280.238 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background6" type="Sprite" parent="Stars"]
position = Vector2( 283.117, 567.557 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background7" type="Sprite" parent="Stars"]
position = Vector2( 69.3046, 327.172 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background9" type="Sprite" parent="Stars"]
position = Vector2( 870.471, 486.647 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background10" type="Sprite" parent="Stars"]
position = Vector2( 664.58, 566.87 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background11" type="Sprite" parent="Stars"]
position = Vector2( 451.139, 409.288 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background12" type="Sprite" parent="Stars"]
position = Vector2( 38.4792, 539.863 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background13" type="Sprite" parent="Stars"]
position = Vector2( 587.591, 197.799 )
rotation = 1.74845e-07
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Background14" type="Sprite" parent="Stars"]
position = Vector2( 969.094, 211.53 )
rotation = 1.74846e-07
scale = Vector2( 1.58024, 1.65232 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Stars" type="Sprite" parent="Stars"]
position = Vector2( 191.099, 195.69 )
scale = Vector2( 1.28073, 1.19442 )
texture = ExtResource( 10 )
offset = Vector2( -26.5, -39.3501 )

[node name="Lives" type="Node2D" parent="."]
position = Vector2( 79.0287, 50.6735 )
scale = Vector2( 2, 2 )

[node name="P1_lives" parent="Lives" instance=ExtResource( 17 )]

[node name="Character" parent="Lives/P1_lives" index="0"]
position = Vector2( -21, -4 )

[node name="Sprite" parent="Lives/P1_lives" index="1"]
position = Vector2( 24, 0 )

[node name="RichTextLabel" parent="Lives/P1_lives" index="2"]
margin_left = -8.0
margin_right = 144.0

[node name="P2_lives" parent="Lives" instance=ExtResource( 17 )]
position = Vector2( 104, -1 )

[node name="Character" parent="Lives/P2_lives" index="0"]
texture = ExtResource( 19 )

[node name="P3_lives" parent="Lives" instance=ExtResource( 17 )]
position = Vector2( 184, -1 )

[node name="Character" parent="Lives/P3_lives" index="0"]
texture = ExtResource( 20 )

[node name="P4_lives" parent="Lives" instance=ExtResource( 17 )]
position = Vector2( 264, -1 )

[node name="Character" parent="Lives/P4_lives" index="0"]
texture = ExtResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -20.715
autoplay = true

[node name="ItemSpawn" type="Node2D" parent="."]

[node name="Location1" type="Node2D" parent="ItemSpawn"]
position = Vector2( 479.029, 298.674 )

[node name="Location2" type="Node2D" parent="ItemSpawn"]
position = Vector2( 919.029, 58.6735 )

[node name="Location3" type="Node2D" parent="ItemSpawn"]
position = Vector2( 191.029, 482.674 )

[node name="Location4" type="Node2D" parent="ItemSpawn"]
position = Vector2( 623.029, 306.674 )
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]

[editable path="Player"]

[editable path="Lives/P1_lives"]

[editable path="Lives/P2_lives"]

[editable path="Lives/P3_lives"]

[editable path="Lives/P4_lives"]
